# SpaMtrix

./: .gitignore  CMakeLists.txt  README  README.md  TODO.txt  makefile  makefile.def
examples/: CMakeLists.txt
examples/decomposition_solvers/: CMakeLists.txt  decomposition_solvers.cpp  makefile
examples/eigenvalues/: CMakeLists.txt  Makefile  eigenvalues.cpp
examples/input_output/: CMakeLists.txt  input_output  input_output.cpp  makefile  testoutput.txt
examples/matrix_basics/: CMakeLists.txt  main.cpp  makefile  matrix_basics  matrix_basics.cpp
examples/pcg_test/: CMakeLists.txt  makefile  pcg_test  pcg_test.py
examples/test1/: test1  test1.cpp
examples/test2/: test2  test2.cpp
examples/test3/: test3  test3.cpp
examples/test4/: CMakeLists.txt  makefile  test4  test4.cpp
examples/test5/: CMakeLists.txt  makefile  test5  test5.cpp
examples/test6/: .~lock.out.csv#  CMakeLists.txt  makefile  test6  test6.cpp
examples/tridiag_solver/: CMakeLists.txt  makefile  tridiag_solver  tridiag_solver.cpp
include/: cg.h  cholesky.h  cholincpreconditioner.h  densematrix.h  diagpreconditioner.h  fleximatrix.h  gmres.h  ircmatrix.h  iterativesolvers.h  jacobipreconditioner.h  lu.h  luincpreconditioner.h  matrixmaker.h  preconditioner.h  reader.h  relaxers.h  setup.h  sorpreconditioner.h  spamtrix_blas.h  spamtrix_blas.hpp  spamtrix_cholesky.hpp  spamtrix_cholincpreconditioner.hpp  spamtrix_densematrix.hpp  spamtrix_diagpreconditioner.hpp  spamtrix_fleximatrix.hpp  spamtrix_ircmatrix.hpp  spamtrix_iterativesolvers.hpp  spamtrix_lu.hpp  spamtrix_luincpreconditioner.hpp  spamtrix_matrixmaker.hpp  spamtrix_powermethod.hpp  spamtrix_preconditioner.hpp  spamtrix_reader.hpp  spamtrix_setup.hpp  spamtrix_tdmatrix.hpp  spamtrix_vector.hpp  spamtrix_writer.hpp  tdmatrix.h  tickcounter.h  vector.h  (+1 more)
includes/: cg.h  cholesky.h  cholincpreconditioner.h  diagpreconditioner.h  fleximatrix.h  ircmatrix.h  jacobipreconditioner.h  matrixmaker.h  mvvd.h  mvvi.h  pcg.h  preconditioner.h  rcmatrix.h  relaxers.h  setup.h  sorpreconditioner.h  spamtrix_blas.h  tdmatrix.h  vector.h
lib/: CMakeLists.txt
lib/include/: spamtrix_blas.hpp  spamtrix_cholesky.hpp  spamtrix_cholincpreconditioner.hpp  spamtrix_densematrix.hpp  spamtrix_diagpreconditioner.hpp  spamtrix_exception.hpp  spamtrix_fleximatrix.hpp  spamtrix_ircmatrix.hpp  spamtrix_lu.hpp  spamtrix_luincpreconditioner.hpp  spamtrix_matrixmaker.hpp  spamtrix_powermethod.hpp  spamtrix_setup.hpp  spamtrix_tdmatrix.hpp  spamtrix_vector.hpp
lib/src/: cholesky.cpp  cholincpreconditioner.cpp  densematrix.cpp  fleximatrix.cpp  ircmatrix.cpp  iterativesolvers.cpp  lu.cpp  luincpreconditioner.cpp  makefile  matrixmaker.cpp  powermethod.cpp  reader.cpp  spamtrix_blas.cpp  tdmatrix.cpp  vector.cpp  writer.cpp
src/: cg.cpp  cholesky.cpp  cholincpreconditioner.cpp  densematrix.cpp  diagpreconditioner.cpp  fleximatrix.cpp  ircmatrix.cpp  ircmatrix_test.cpp  iterativesolvers.cpp  lu.cpp  luincpreconditioner.cpp  makefile  makefile~  makeircmatrix.cpp  matrixmaker.cpp  mvvd.cpp  mvvi.cpp  pcg.cpp  powermethod.cpp  rcmatrix.cpp  reader.cpp  spamtrix.i  spamtrix_blas.cpp  tdmatrix.cpp  test1.cpp  test2.cpp  vector.cpp  writer.cpp
src/test3/: Makefile  test3  test3.cpp  test3.pro
src/test4/: Makefile  test4  test4.cpp  test4.pro
tests/: CMakeLists.txt  ircmatrix_test.cpp  solver_test.cpp  test.cpp
tests/test1/: makefile  test1  test1.cpp
tests/test2/: makefile  test2  test2.cpp
tests/test3/: makefile  test3  test3.cpp
tests/test4/: makefile  test4  test4.cpp
tests/test5/: makefile  test5  test5.cpp
tests/test6/: makefile  out.csv  test6  test6.cpp
